panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_compound_assignment_to_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_compound_assignment_to_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_compound_assignment_to_deref.c"
   (function-definition external stack-size=72
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~2 `int` @0) (42 `int` @0))
         (definition (p~3 `ptr<int>` @8)
            (addressof `ptr<int>` @8
               (x~2 `int` @0)))
         (expression
            (combine `int` @16
               (assign `ptr<int>` @24
                  (unnamed-temporary~4 `ptr<int>` @24)
                  (addressof `ptr<int>` @24
                     (deref `int` @24 (p~3 `ptr<int>` @8))))
               (assign `int` @16
                  (deref `int` @16 (unnamed-temporary~4 `ptr<int>` @24))
                  (truncate `int` @32
                     (add `long` @40
                        (sign-extend `long` @40 (deref `int` @48 (unnamed-temporary~4 `ptr<int>` @24)))
                        (27 `long` @56))))))
         (return (x~2 `int` @0)))))

----- stderr -----
