panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_empty_expression_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_empty_expression_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_empty_expression_in_main.c"
   (function-definition external stack-size=8
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (expression ∅)
         (expression ∅)
         (expression ∅))))

----- stderr -----
