panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_explicit_cast.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_explicit_cast.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_explicit_cast.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=40
      (f~1 `fn(fmt: ptr<char const>) -> void` (static f))
      (params
         (fmt~3 `ptr<char const>` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (fmt~3 `ptr<char const>` @0)
               (123 `int` @24)))))
   (function-definition external stack-size=24
      (g~4 `fn() -> int` (static g))
      (compound-statement
         (return (42 `int` @0))))
   (function-definition external stack-size=88
      (main~6 `fn(argc: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (argc~8 `int` @0)
         (argv~9 `ptr<ptr<char>>` @8))
      (compound-statement
         (expression
            (call `void` @void
               (addressof `ptr<fn(fmt: ptr<char const>) -> void>` @16
                  (f~1 `fn(fmt: ptr<char const>) -> void` (static f)))
               (noop-type-conversion `ptr<char const>` @24
                  (deref `ptr<char>` @24
                     (ptr-add `ptr<ptr<char>>` @32
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @40 (2 `int` @48)))))))
         (expression (void-cast `void` @void (42 `int` @16)))
         (expression
            (void-cast `void` @void
               (call `int` @16
                  (addressof `ptr<fn() -> int>` @24
                     (g~4 `fn() -> int` (static g))))))
         (expression (void-cast `void` @void (argc~8 `int` @0)))
         (expression (void-cast `void` @void (argv~9 `ptr<ptr<char>>` @8)))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (sign-extend `ptr<void>` @48 (0 `int` @56))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (noop-type-conversion `ptr<void>` @48 (sign-extend `ptr<int const>` @48 (0 `int` @56)))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (sign-extend `ptr<void>` @48 (42 `int` @56))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (sign-extend `ptr<void>` @48 (negate `int` @56 (1 `int` @56)))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (2 `int` @56)))))
               (sign-extend `int` @48 (truncate `char` @52 (128 `int` @56)))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (2 `int` @56)))))
               (zero-extend `int` @48 (truncate `unsigned char` @52 (128 `int` @56)))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (2 `int` @56)))))
               (noop-type-conversion `int` @48 (42 `int` @48))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~9 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (2 `int` @56)))))
               (truncate `int` @48 (sign-extend `long` @56 (42 `int` @64))))))))

----- stderr -----
