panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_global_variable_with_empty_initialiser_is_zero_initialised.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_global_variable_with_empty_initialiser_is_zero_initialised.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_global_variable_with_empty_initialiser_is_zero_initialised.c"
   (tentative-definition external (zero~0 `int` (static zero)) ∅)
   (function-definition external stack-size=8
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (return (zero~0 `int` (static zero))))))

----- stderr -----
