panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_hello_world.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_hello_world.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_hello_world.c"
   (declaration external (putchar~0 `fn(∅: int) -> int` (static putchar)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (104 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (101 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (108 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (108 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (111 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (32 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (119 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (111 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (114 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (108 `int` @16)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (100 `int` @16)))
         (return
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (10 `int` @16))))))

----- stderr -----
