panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_initialisation_with_noop_type_conversion_gets_new_slot.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_initialisation_with_noop_type_conversion_gets_new_slot.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_initialisation_with_noop_type_conversion_gets_new_slot.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~2 `unsigned int` @0) (noop-type-conversion `unsigned int` @0 (42 `int` @0)))
         (definition (b~3 `int` @4) (27 `int` @4))
         (return (noop-type-conversion `int` @0 (a~2 `unsigned int` @0))))))

----- stderr -----
