panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_ptr_addressof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_ptr_addressof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_addressof.c"
   (function-definition external stack-size=72
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (i1~2 `int` @0) (42 `int` @0))
         (definition (i2~3 `int` @4) (27 `int` @4))
         (definition (p1~4 `ptr<int>` @8)
            (addressof `ptr<int>` @8
               (i1~2 `int` @0)))
         (definition (p2~5 `ptr<int>` @16)
            (addressof `ptr<int>` @16
               (i2~3 `int` @4)))
         (return
            (add `int` @24
               (add `int` @24
                  (add `int` @24
                     (ptr-equal `int` @24
                        (p1~4 `ptr<int>` @8)
                        (addressof `ptr<int>` @32
                           (i1~2 `int` @0)))
                     (ptr-equal `int` @28
                        (p2~5 `ptr<int>` @16)
                        (addressof `ptr<int>` @32
                           (i2~3 `int` @4))))
                  (ptr-equal `int` @28
                     (ptr-add `ptr<int>` @32
                        (p1~4 `ptr<int>` @8)
                        (sign-extend `long` @40 (1 `int` @48)))
                     (p2~5 `ptr<int>` @16)))
               (ptr-equal `int` @28
                  (ptr-sub `ptr<int>` @32
                     (p2~5 `ptr<int>` @16)
                     (sign-extend `long` @40 (1 `int` @48)))
                  (p1~4 `ptr<int>` @8)))))))

----- stderr -----
