panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_ptr_deref_assign.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_ptr_deref_assign.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_deref_assign.c"
   (function-definition external stack-size=72
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~1 `long` @0) (sign-extend `long` @0 (42 `int` @8)))
         (definition (p~2 `ptr<long>` @8)
            (addressof `ptr<long>` @8
               (x~1 `long` @0)))
         (definition (pp~3 `ptr<ptr<long>>` @16)
            (addressof `ptr<ptr<long>>` @16
               (p~2 `ptr<long>` @8)))
         (expression
            (assign `long` @24
               (deref `long` @24 (deref `ptr<long>` @32 (pp~3 `ptr<ptr<long>>` @16)))
               (sign-extend `long` @40 (27 `int` @48))))
         (return (truncate `int` @24 (x~1 `long` @0))))))

----- stderr -----
